<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ipd10.sandwich2.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="84dp"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="214dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/edit_name"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="82dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/temp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <SeekBar
        android:id="@+id/sbTemp"
        android:layout_width="182dp"
        android:layout_height="18dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:max="@integer/max60"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <TextView
        android:id="@+id/tvTemp"
        android:layout_width="26dp"
        android:layout_height="17dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sbTemp"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sbTemp">

        <RadioButton
            android:id="@+id/rbWhite"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="false"
            android:onClick="onRadioButtonClicked"
            android:text="@string/rb_White" />

        <RadioButton
            android:id="@+id/rbWheat"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="onRadioButtonClicked"
            android:text="@string/rb_Wheat" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/cbCheese"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/cb_cheese"
        app:layout_constraintEnd_toStartOf="@+id/cbSalt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <CheckBox
        android:id="@+id/cbSalt"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/cb_Salt"
        app:layout_constraintBaseline_toBaselineOf="@+id/cbCheese"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="onButtonOrderClicked"
        android:text="@string/bt_Order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbSalt" />

</android.support.constraint.ConstraintLayout>
